[tool.poetry]
name = "RT-CLI"
version = "0.1.0"
description = ""
authors = ["shinu <shinu_61@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SCons = "^4.3.0"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
